log
Sun May  3 09:11:17 PM UTC 2026: 
 tests:  1|8
total_score: 0/60
72ac9d4
Sun May  3 09:32:01 PM UTC 2026: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/60
84086f1
Sun May  3 09:58:14 PM UTC 2026: 
 treemap.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:74:24: error: ‘TreeNode’ has no member named ‘current’
   74 |             return temp->current->pair;
      |                        ^~
treemap.c:77:23: error: ‘TreeMap’ has no member named ‘lowerthan’; did you mean ‘lower_than’?
   77 |         else if(tree->lowerthan(key,temp->pair->key) == 1)
      |                       ^~~~~~~~~
      |                       lower_than
85e0b24
Sun May  3 09:58:46 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:23: error: ‘TreeMap’ has no member named ‘lowerthan’; did you mean ‘lower_than’?
   77 |         else if(tree->lowerthan(key,temp->pair->key) == 1)
      |                       ^~~~~~~~~
      |                       lower_than
0242f9f
Sun May  3 09:59:12 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
2ebe617
Sun May  3 10:22:57 PM UTC 2026: 
 treemap.c | 50 ++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 50 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:106:7: error: ‘true’ undeclared (first use in this function)
  106 | while(true)
      |       ^~~~
treemap.c:7:1: note: ‘true’ is defined in header ‘<stdbool.h>’; this is probably fixable by adding ‘#include <stdbool.h>’
    6 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    7 | 
treemap.c:106:7: note: each undeclared identifier is reported only once for each function it appears in
  106 | while(true)
      |       ^~~~
47360a1
Sun May  3 10:23:25 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/60
6039784
Sun May  3 10:24:52 PM UTC 2026: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/60
d38e2e2
Mon May  4 12:39:30 AM UTC 2026: 
 tests:  13|5
total_score: 25/60
6ca14fe
Mon May  4 12:45:19 AM UTC 2026: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/60
0e65532
Mon May  4 01:19:57 AM UTC 2026: 
 treemap.c | 50 ++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 50 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:202:38: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
  202 |             else if(tree->lower_than(key,temp->pair->key) == 1)
      |                                      ^~~
      |                                      key_t
treemap.c:202:38: note: each undeclared identifier is reported only once for each function it appears in
34a4bfa
Mon May  4 01:21:33 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:202:42: error: ‘TreeNode’ has no member named ‘key’
  202 |             else if(tree->lower_than(node->key,temp->pair->key) == 1)
      |                                          ^~
580a75c
Mon May  4 01:25:14 AM UTC 2026: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:213:18: error: ‘Pair’ has no member named ‘left’
  213 |     if(node->pair->left == NULL && node->pair->right == NULL)
      |                  ^~
treemap.c:213:46: error: ‘Pair’ has no member named ‘right’
  213 |     if(node->pair->left == NULL && node->pair->right == NULL)
      |                                              ^~
treemap.c:215:24: error: ‘Pair’ has no member named ‘left’
  215 |         if(parent->pair->left == node)
      |                        ^~
treemap.c:217:25: error: ‘Pair’ has no member named ‘left’
  217 |             parent->pair->left = NULL;
      |                         ^~
treemap.c:222:25: error: ‘Pair’ has no member named ‘right’
  222 |             parent->pair->right = NULL;
      |                         ^~
1c1fe42
